[project]
name = "pytestzoo"
version = "0.1.0"
description = "A demonstration of pytest and coverage"
authors = [
    {name = "Robert Turnbull",email = "robert.turnbull@unimelb.edu.au"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer (>=0.15.3,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5"
coverage = ">=7.8.0"


[tool.poetry.scripts]
pytestzoo = "pytestzoo.main:app"